28. Find positional min/max of a tensor

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMW3NEDMv4lYcT/S13LQ/kg"
+      "authorship_tag": "ABX9TyOQ6DcRuUXquJ9oZQijMtPH"
     },
     "kernelspec": {
       "name": "python3",
@@ -2479,11 +2479,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ehn5cPsp4a7k",
-        "outputId": "313b094a-e996-4d8d-9584-73267fea3184",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ehn5cPsp4a7k",
+        "outputId": "313b094a-e996-4d8d-9584-73267fea3184"
       },
       "source": [
         "# Get the absolute values\n",
@@ -2525,11 +2525,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "leP8QYvH6RFn",
-        "outputId": "dc0b56a6-f4cb-453d-c0ca-b1374611fd0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "leP8QYvH6RFn",
+        "outputId": "dc0b56a6-f4cb-453d-c0ca-b1374611fd0f"
       },
       "source": [
         "# Create a random tensor with values between 0 and 100 of size 50\n",
@@ -2559,11 +2559,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q7QtviHQ7IIT",
-        "outputId": "ee6501cd-dca2-4a8f-8a40-c6852fbaa805",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Q7QtviHQ7IIT",
+        "outputId": "ee6501cd-dca2-4a8f-8a40-c6852fbaa805"
       },
       "source": [
         "tf.size(E) , E.shape, E.ndim"
@@ -2587,11 +2587,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mixIElXI7PAw",
-        "outputId": "f4b71457-b9cf-4933-9e51-af924724133e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mixIElXI7PAw",
+        "outputId": "f4b71457-b9cf-4933-9e51-af924724133e"
       },
       "source": [
         "# Find the minimum\n",
@@ -2616,11 +2616,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j87CH7vw7cjv",
-        "outputId": "410e758e-a64f-477b-dda4-06cf11395d18",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j87CH7vw7cjv",
+        "outputId": "410e758e-a64f-477b-dda4-06cf11395d18"
       },
       "source": [
         "# Find the maximum\n",
@@ -2645,11 +2645,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8kh8scNq7iHT",
-        "outputId": "58706494-6726-4055-99c7-4096e80456cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8kh8scNq7iHT",
+        "outputId": "58706494-6726-4055-99c7-4096e80456cc"
       },
       "source": [
         "# Find the mean \n",
@@ -2674,11 +2674,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QpXErMid7pRw",
-        "outputId": "cae69b85-9a05-40d3-94b5-2930f5b0e9d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QpXErMid7pRw",
+        "outputId": "cae69b85-9a05-40d3-94b5-2930f5b0e9d4"
       },
       "source": [
         "#Find the sum\n",
@@ -2712,12 +2712,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HFljUkHj8ADn",
-        "outputId": "92e8d193-5388-43b3-abe9-93be3de8093a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 340
-        }
+        },
+        "id": "HFljUkHj8ADn",
+        "outputId": "92e8d193-5388-43b3-abe9-93be3de8093a"
       },
       "source": [
         "# Find the standard deviation\n",
@@ -2759,11 +2759,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cMDG7wjM_jP0",
-        "outputId": "0e580947-e426-4385-df30-69013ed24b98",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cMDG7wjM_jP0",
+        "outputId": "0e580947-e426-4385-df30-69013ed24b98"
       },
       "source": [
         "#Find the variance of our tensor, we need access to tensorflow_probability\n",
@@ -2788,11 +2788,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "owdU6JfCAJU2",
-        "outputId": "bdc9bb2c-ac36-47a2-aa13-a4bdec54868c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "owdU6JfCAJU2",
+        "outputId": "bdc9bb2c-ac36-47a2-aa13-a4bdec54868c"
       },
       "source": [
         "#Find the standard deviation\n",
@@ -2818,13 +2818,232 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6LsqWiu4AopS"
+        "id": "TNrJe92XCqxR",
+        "outputId": "f4a96fa5-2e18-4732-a097-9530374995f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "tf.math.reduce_variance(tf.cast(E, dtype=tf.float32))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=float32, numpy=823.97156>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 137
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qa-NslvgBvOm"
+      },
+      "source": [
+        "### Find the positional maximum and minimum\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XCakzk2tBz2r",
+        "outputId": "565d9203-fc3d-42e3-b4df-e89fcfc7ddc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create a new tensor for finding positional maximum and minimum\n",
+        "tf.random.set_seed(42)\n",
+        "F = tf.random.uniform(shape=[50])\n",
+        "F"
+      ],
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(50,), dtype=float32, numpy=\n",
+              "array([0.6645621 , 0.44100678, 0.3528825 , 0.46448255, 0.03366041,\n",
+              "       0.68467236, 0.74011743, 0.8724445 , 0.22632635, 0.22319686,\n",
+              "       0.3103881 , 0.7223358 , 0.13318717, 0.5480639 , 0.5746088 ,\n",
+              "       0.8996835 , 0.00946367, 0.5212307 , 0.6345445 , 0.1993283 ,\n",
+              "       0.72942245, 0.54583454, 0.10756552, 0.6767061 , 0.6602763 ,\n",
+              "       0.33695042, 0.60141766, 0.21062577, 0.8527372 , 0.44062173,\n",
+              "       0.9485276 , 0.23752594, 0.81179297, 0.5263394 , 0.494308  ,\n",
+              "       0.21612847, 0.8457197 , 0.8718841 , 0.3083862 , 0.6868038 ,\n",
+              "       0.23764038, 0.7817228 , 0.9671384 , 0.06870162, 0.79873943,\n",
+              "       0.66028714, 0.5871513 , 0.16461694, 0.7381023 , 0.32054043],\n",
+              "      dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hh46EXNRDcVc",
+        "outputId": "f4fbfce6-5321-4b30-9f35-bc73f7f0e3b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Find the positional maximum\n",
+        "tf.argmax(F)"
+      ],
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int64, numpy=42>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 142
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nvo9O-EYDyUY",
+        "outputId": "9e9fe25e-c00a-4cff-e445-791bb85ad64b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Index on our largest value position\n",
+        "F[tf.argmax(F)]"
+      ],
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=float32, numpy=0.9671384>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 143
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n0h-abl-D-Wb",
+        "outputId": "797e92e2-c406-4a73-96dc-51283ee5cc9d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Find max value of F\n",
+        "tf.reduce_max(F)"
+      ],
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=float32, numpy=0.9671384>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BMYAxbLrEClT",
+        "outputId": "99249f55-1090-4d12-c3fc-6c0f4f5083b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Check for equality\n",
+        "\n",
+        "F[tf.argmax(F)] == tf.reduce_max(F)"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=bool, numpy=True>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PpYwAYPkEZYe",
+        "outputId": "5739531a-010c-438c-c3c2-280918fd0939",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Find positional minimum\n",
+        "tf.argmin(F)\n",
+        "\n",
+        "F[tf.argmin(F)], tf.reduce_min(F)"
+      ],
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<tf.Tensor: shape=(), dtype=float32, numpy=0.009463668>,\n",
+              " <tf.Tensor: shape=(), dtype=float32, numpy=0.009463668>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 148
+        }
+      ]
     }
   ]
 }
