31. Trying out more tensor math operations

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjyLwC4iBYhJHKKNjxaLlg",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPevUmj7V3xZ8wayu5uxTOx"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/prasann25/colab/blob/main/00_TensorflowFundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -3048,11 +3037,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F4aza6utagl8",
-        "outputId": "b27cec66-06b0-4f0c-cf5b-6dfb9484b359",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F4aza6utagl8",
+        "outputId": "b27cec66-06b0-4f0c-cf5b-6dfb9484b359"
       },
       "source": [
         "# Create a tensor to get started\n",
@@ -3090,11 +3079,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MZoZ4LpFbDeY",
-        "outputId": "ee393a2e-3e13-4d57-b8b3-45940c1116c2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MZoZ4LpFbDeY",
+        "outputId": "ee393a2e-3e13-4d57-b8b3-45940c1116c2"
       },
       "source": [
         "G.shape"
@@ -3118,11 +3107,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HWMikqzjbHSs",
-        "outputId": "ec9384df-768d-4ccd-a826-9b580a5720f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HWMikqzjbHSs",
+        "outputId": "ec9384df-768d-4ccd-a826-9b580a5720f6"
       },
       "source": [
         "# Remove shape of size 1 from tensor\n",
@@ -3153,6 +3142,237 @@
             "tags": []
           },
           "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zyGWYwU-cSyT"
+      },
+      "source": [
+        "### One-hot encoding tensor\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m_oRcjdWcrkN",
+        "outputId": "96f32cf7-c563-4c73-855d-8290faee317c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Create a list of indices\n",
+        "\n",
+        "some_list = [0, 1, 2, 3] # could be red, green, blue, purple\n",
+        "\n",
+        "#One hot encode our list of indices\n",
+        "tf.one_hot(some_list, depth=4)"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
+              "array([[1., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0.],\n",
+              "       [0., 0., 1., 0.],\n",
+              "       [0., 0., 0., 1.]], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SdJJAJ1HePo_",
+        "outputId": "c78dd0ad-52f8-45f7-8d03-e81ae1912466",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Specify custom values for one hot encoding\n",
+        "\n",
+        "tf.one_hot(some_list, depth = 4, on_value=\"Yo I love deep learning\", off_value=\"I also like to dance\")"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(4, 4), dtype=string, numpy=\n",
+              "array([[b'Yo I love deep learning', b'I also like to dance',\n",
+              "        b'I also like to dance', b'I also like to dance'],\n",
+              "       [b'I also like to dance', b'Yo I love deep learning',\n",
+              "        b'I also like to dance', b'I also like to dance'],\n",
+              "       [b'I also like to dance', b'I also like to dance',\n",
+              "        b'Yo I love deep learning', b'I also like to dance'],\n",
+              "       [b'I also like to dance', b'I also like to dance',\n",
+              "        b'I also like to dance', b'Yo I love deep learning']],\n",
+              "      dtype=object)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bPW6Ptaotsh3"
+      },
+      "source": [
+        "### Squaring, log, square root"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z789yo1ntqa1",
+        "outputId": "6833a74f-b7d6-4968-d10d-97c3bb0440fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Create a new tensor\n",
+        "H = tf.range(1, 10)\n",
+        "H"
+      ],
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(9,), dtype=int32, numpy=array([1, 2, 3, 4, 5, 6, 7, 8, 9], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W_UaKivYwU7m",
+        "outputId": "dc65c662-fc5b-42a3-e886-c0efd2ee619a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tf.square(H)"
+      ],
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(9,), dtype=int32, numpy=array([ 1,  4,  9, 16, 25, 36, 49, 64, 81], dtype=int32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 114
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dMUWpHqqw23M"
+      },
+      "source": [
+        "# this one would throw error as int32 is not valid type\n",
+        "#Uncomment this\n",
+        "#tf.sqrt(H)\n",
+        "\n",
+        "#Uncomment this\n",
+        "#tf.math.log(H)"
+      ],
+      "execution_count": 118,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FGjzdRtawbtr",
+        "outputId": "5bbe7193-49f4-4c37-fb34-73af5744bed8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Find the squareroot\n",
+        "\n",
+        "tf.sqrt(tf.cast(H, dtype=tf.float32))"
+      ],
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(9,), dtype=float32, numpy=\n",
+              "array([0.99999994, 1.4142134 , 1.7320508 , 1.9999999 , 2.236068  ,\n",
+              "       2.4494896 , 2.6457512 , 2.8284268 , 3.        ], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 119
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sdFx0S2BxCgY",
+        "outputId": "503b5828-5518-4c24-fade-36c97684f8be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Find the log now\n",
+        "tf.math.log(tf.cast(H, dtype = tf.float32))"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(9,), dtype=float32, numpy=\n",
+              "array([0.       , 0.6931472, 1.0986123, 1.3862944, 1.609438 , 1.7917595,\n",
+              "       1.9459102, 2.0794415, 2.1972246], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 123
         }
       ]
     }
