32. Exploring TensorFlow and NumPy's compatibility

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPevUmj7V3xZ8wayu5uxTOx"
+      "authorship_tag": "ABX9TyOVQhI8FISazBUzv8CR8pll"
     },
     "kernelspec": {
       "name": "python3",
@@ -3157,11 +3157,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m_oRcjdWcrkN",
-        "outputId": "96f32cf7-c563-4c73-855d-8290faee317c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m_oRcjdWcrkN",
+        "outputId": "96f32cf7-c563-4c73-855d-8290faee317c"
       },
       "source": [
         "# Create a list of indices\n",
@@ -3194,11 +3194,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SdJJAJ1HePo_",
-        "outputId": "c78dd0ad-52f8-45f7-8d03-e81ae1912466",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SdJJAJ1HePo_",
+        "outputId": "c78dd0ad-52f8-45f7-8d03-e81ae1912466"
       },
       "source": [
         "# Specify custom values for one hot encoding\n",
@@ -3242,11 +3242,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "z789yo1ntqa1",
-        "outputId": "6833a74f-b7d6-4968-d10d-97c3bb0440fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "z789yo1ntqa1",
+        "outputId": "6833a74f-b7d6-4968-d10d-97c3bb0440fc"
       },
       "source": [
         "#Create a new tensor\n",
@@ -3272,11 +3272,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W_UaKivYwU7m",
-        "outputId": "dc65c662-fc5b-42a3-e886-c0efd2ee619a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W_UaKivYwU7m",
+        "outputId": "dc65c662-fc5b-42a3-e886-c0efd2ee619a"
       },
       "source": [
         "tf.square(H)"
@@ -3316,11 +3316,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FGjzdRtawbtr",
-        "outputId": "5bbe7193-49f4-4c37-fb34-73af5744bed8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FGjzdRtawbtr",
+        "outputId": "5bbe7193-49f4-4c37-fb34-73af5744bed8"
       },
       "source": [
         "#Find the squareroot\n",
@@ -3348,11 +3348,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sdFx0S2BxCgY",
-        "outputId": "503b5828-5518-4c24-fade-36c97684f8be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sdFx0S2BxCgY",
+        "outputId": "503b5828-5518-4c24-fade-36c97684f8be"
       },
       "source": [
         "#Find the log now\n",
@@ -3373,6 +3373,171 @@
             "tags": []
           },
           "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UMcIKZqmxtqW"
+      },
+      "source": [
+        "### Tensors and Numpy\n",
+        "\n",
+        "Tensorflow interacts beautifully with NumPy arrays.\n",
+        "\n",
+        "* Some functionality you want to use but not available in Tensor, you could quickly do in NumPy and convert them back again"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HKeQEEBAyXsR",
+        "outputId": "761921f0-95e3-4f96-95b1-fbc8aa81521b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "#Create a tensor directly from NumPy arrays\n",
+        "\n",
+        "J = tf.constant(np.array([3., 7., 10.]))\n",
+        "J"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3,), dtype=float64, numpy=array([ 3.,  7., 10.])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1nxzn4NZzA90",
+        "outputId": "b7448a98-6baf-413c-8d2c-f5999c3ece91",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Convert our tensor back to NumPy array\n",
+        "np.array(J), type(np.array(J))"
+      ],
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([ 3.,  7., 10.]), numpy.ndarray)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JuEx5TR6zX0V",
+        "outputId": "1db2ac6f-feb1-4167-a684-24d9415ade5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Convert tensor J to a NumPy array\n",
+        "J.numpy(), type(J.numpy())"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([ 3.,  7., 10.]), numpy.ndarray)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fg4ERo04zkX0",
+        "outputId": "82739fc4-cfc5-4dd4-a654-b363981eb654",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "J = tf.constant([3. ])\n",
+        "J.numpy()[0]"
+      ],
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 132
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CXY9GVjmz4rh",
+        "outputId": "229fc549-6644-4ae0-e059-8c5231396c5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# The default type of each are slightly different\n",
+        "\n",
+        "numpy_J  = tf.constant(np.array([3., 7., 10.]))\n",
+        "tensor_J = tf.constant([3., 7., 10.])\n",
+        "\n",
+        "# Check the datatype of each\n",
+        "numpy_J.dtype, tensor_J.dtype"
+      ],
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tf.float64, tf.float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 135
         }
       ]
     }
