33. Making sure our tensor operations run really fast on GPUs

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6rjt8It/gARUqquRB6wm4",
+      "authorship_tag": "ABX9TyM9Alnr6xUiDNT8YszNlTu0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -3368,7 +3369,9 @@
         "\n",
         "Tensorflow interacts beautifully with NumPy arrays.\n",
         "\n",
-        "* Some functionality you want to use but not available in Tensor, you could quickly do in NumPy and convert them back again"
+        "* Some functionality you want to use but not available in Tensor, you could quickly do in NumPy and convert them back again\n",
+        "\n",
+        "**Note** : One of the main differences between a TensorFlow tensor and a NumPy array is that a TensorFlow tensor can be run on a GPU or TPU ( for faster numerical processing)\n"
       ]
     },
     {
@@ -3521,6 +3524,97 @@
           },
           "execution_count": 204
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CkV5QT928wog"
+      },
+      "source": [
+        "###Finding access to GPUs\n",
+        "\n",
+        "CUDA ( Compute Unified Device Architecture)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SHH5DfwM9Lej",
+        "outputId": "b8156e66-49ab-47da-82fa-3dd2acf2bf23"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "tf.config.list_physical_devices(\"GPU\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "asx2EShd9UTx",
+        "outputId": "022ac8ad-e608-4a0b-beb9-ddff9011df32"
+      },
+      "source": [
+        "!nvidia-smi"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Thu Jun 10 22:06:33 2021       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 465.27       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   42C    P8     9W /  70W |      3MiB / 15109MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OusEv8bU94ga"
+      },
+      "source": [
+        "###  **Note** : If you have access to a CUDA-enabled GPU, Tensorflow will automatically use it whenever possible"
       ]
     }
   ]
