Complete Introduction to Tensor Fundamentals

--- a/00_TensorflowFundamentals.ipynb
+++ b/00_TensorflowFundamentals.ipynb
@@ -5,8 +5,8 @@
     "colab": {
       "name": "00_TensorflowFundamentals.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9Alnr6xUiDNT8YszNlTu0",
-      "include_colab_link": true
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNbaV+n+TwaKm9LiMEM4TxQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +18,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/prasann25/colab/blob/main/00_TensorflowFundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -654,9 +644,9 @@
         "id": "rklbDuRGg2ey"
       },
       "source": [
-        "### ***Exercise*** Read through Tensorflow documentation on random seed generation :[https://www.tensorflow.org/api_docs/python/tf/random/set_seed](https://www.tensorflow.org/api_docs/python/tf/random/set_seed) and practice writing 5 random tensors and shuffle them\n",
+        "> ***Exercise*** Read through Tensorflow documentation on random seed generation :[https://www.tensorflow.org/api_docs/python/tf/random/set_seed](https://www.tensorflow.org/api_docs/python/tf/random/set_seed) and practice writing 5 random tensors and shuffle them.\n",
         "\n",
-        "It looks like if we want our shuffled tensors to be in the same order, we've got to use the global level random seed as well as the operation level random seed:\n",
+        "> It looks like if we want our shuffled tensors to be in the same order, we've got to use the global level random seed as well as the operation level random seed:\n",
         "> Rule 4: \"If both the global and operation seed are set : Both seeds are used in conjuction to determine the random sequence\"."
       ]
     },
@@ -1631,7 +1621,7 @@
         "id": "Ue2HKFTRSOSi"
       },
       "source": [
-        "###*** Matrix manipulation***\n",
+        "### **Matrix Manipulation**\n",
         "\n",
         "In ML, matrix manipulation is one of the most common tensor operations.\n",
         "\n",
@@ -3371,7 +3361,7 @@
         "\n",
         "* Some functionality you want to use but not available in Tensor, you could quickly do in NumPy and convert them back again\n",
         "\n",
-        "**Note** : One of the main differences between a TensorFlow tensor and a NumPy array is that a TensorFlow tensor can be run on a GPU or TPU ( for faster numerical processing)\n"
+        "> **Note** : One of the main differences between a TensorFlow tensor and a NumPy array is that a TensorFlow tensor can be run on a GPU or TPU ( for faster numerical processing)\n"
       ]
     },
     {
@@ -3614,7 +3604,7 @@
         "id": "OusEv8bU94ga"
       },
       "source": [
-        "###  **Note** : If you have access to a CUDA-enabled GPU, Tensorflow will automatically use it whenever possible"
+        " > **Note** : If you have access to a CUDA-enabled GPU, Tensorflow will automatically use it whenever possible"
       ]
     }
   ]
